--- a/SvelteKit_site/package.json
+++ b/SvelteKit_site/package.json
@@ -13,6 +13,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/d3": "^7.4.3",
@@ -21,13 +22,16 @@
 		"sass": "^1.77.6",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-preprocess": "^6.0.1",
 		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
+		"typescript": "^5.5.2",
 		"vite": "^5.0.3"
 	},
 	"type": "module",
 	"dependencies": {
 		"bulma": "^1.0.1",
-		"d3": "^7.9.0"
+		"chart.js": "^4.4.3",
+		"d3": "^7.9.0",
+		"svelte-chartjs": "^3.1.5"
 	}
 }
