--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/better-sqlite3": "^7.6.11",
+		"@types/json2csv": "^5.0.7",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.5",
 		"sass": "^1.77.6",
@@ -29,9 +30,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@json2csv/node": "^7.0.6",
 		"better-sqlite3": "^11.1.2",
 		"bulma": "^1.0.1",
 		"chart.js": "^4.4.3",
-		"chartjs-adapter-date-fns": "^3.0.0"
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"json2csv": "^6.0.0-alpha.2"
 	}
 }
