--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@erbelion/vite-plugin-sveltekit-purgecss": "^0.1.0",
 		"@fullhuman/postcss-purgecss": "^6.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.0",
@@ -35,6 +36,8 @@
 		"bulma": "^1.0.1",
 		"chart.js": "^4.4.3",
 		"chartjs-adapter-date-fns": "^3.0.0",
+		"csv-parse": "^5.5.6",
+		"csv-stringify": "^6.5.0",
 		"json2csv": "^6.0.0-alpha.2"
 	}
 }
