--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
 	"type": "module",
 	"dependencies": {
 		"@json2csv/node": "^7.0.6",
+		"@polka/compression": "^1.0.0-next.25",
 		"better-sqlite3": "^11.1.2",
 		"bulma": "^1.0.1",
 		"chart.js": "^4.4.3",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"csv-parse": "^5.5.6",
 		"csv-stringify": "^6.5.0",
-		"json2csv": "^6.0.0-alpha.2"
+		"json2csv": "^6.0.0-alpha.2",
+		"polka": "^0.5.2"
 	}
 }
