--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"csv-parse": "^5.5.6",
 		"csv-stringify": "^6.5.0",
+		"express": "^4.19.2",
 		"json2csv": "^6.0.0-alpha.2",
 		"polka": "^0.5.2"
 	}
