--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/json2csv": "^5.0.7",
+		"@types/papaparse": "^5.3.14",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.2.5",
 		"sass": "^1.77.6",
@@ -39,6 +40,7 @@
 		"chart.js": "^4.4.3",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"csv-parse": "^5.5.6",
+		"csv-parser": "^3.0.0",
 		"csv-stringify": "^6.5.0",
 		"express": "^4.19.2",
 		"json2csv": "^6.0.0-alpha.2",
